--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node server",
     "start-pm": "pm2 start server.js -i max",
     "build": "astro check && astro build",
-    "dev:vercel": "PLATFORM='vercel' npx vercel dev",
-    "dev:netlify": "PLATFORM='netlify' npx netlify dev",
-    "dev:api": "DISABLE_GUI='true' PORT='3001' nodemon server",
-    "dev:astro": "PUBLIC_API_ENDPOINT=http://localhost:3001/api astro dev",
-    "dev": "concurrently -c magenta,cyan -n backend,frontend 'yarn dev:api' 'yarn dev:astro'"
+    "dev:vercel": "npx cross-env PLATFORM=vercel vercel dev",
+    "dev:netlify": "npx cross-env PLATFORM=netlify netlify dev",
+    "dev:api": "npx cross-env DISABLE_GUI=true PORT=3001 nodemon server",
+    "dev:astro": "npx cross-env PUBLIC_API_ENDPOINT=http://localhost:3001/api astro dev",
+    "dev": "concurrently -c magenta,cyan -n backend,frontend 'yarn dev:api' 'yarn dev:astro'",
+    "dev-ps": "concurrently -c magenta,cyan -n backend,frontend \"yarn dev:api\" \"yarn dev:astro\""
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
